@@ -1,0 +1,12 @@
+/* XPM */
+static char * x_xpm[] = {
+"8 8 2 1",
+" 	c None",
+".	c #000000",
+"        ",
+" ..  .. ",
+"  ....  ",
+"   ..   ",
+"  ....  ",
+" ..  .. ",
+"        ",};
